<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:background="@drawable/shape_commit_failed_bg"
    android:orientation="vertical"
    android:layout_height="201dp">

    <ImageView
        android:id="@+id/dismissErrorLayout"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:padding="6dp"
        android:layout_marginEnd="10dp"
        android:layout_gravity="end"
        android:src="@mipmap/dismiss_icon"/>
    
    <ImageView
        android:layout_gravity="center_horizontal"
        android:layout_width="40dp"
        android:src="@mipmap/failed_icon"
        android:layout_marginTop="40dp"
        android:layout_height="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/commitFailedTip"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:textSize="14sp"/>

    <LinearLayout
        android:layout_width="300dp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/resubmit"
            android:text="@string/resubmit"
            android:gravity="center"
            android:textColor="@color/orange"
            android:layout_marginEnd="15dp"
            android:background="@drawable/recommit_bg"
            android:layout_width="100dp"
            android:layout_height="32dp"/>

        <TextView
            android:id="@+id/resumePlay"
            android:text="@string/resumePlay"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:background="@drawable/resume_play_bg"
            android:layout_width="100dp"
            android:layout_height="32dp"/>
    </LinearLayout>
</LinearLayout>