<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#CC333333"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/statisticsResult"
            android:layout_width="68dp"
            android:layout_height="23dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_statistics_bg"
            android:gravity="center"
            android:textColor="#ffffffff"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/statistics_title"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/dismissStatistics"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:padding="6dp"
            android:src="@mipmap/dismiss_icon" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/statisticsRecycler"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/backView"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp"
            android:background="@drawable/shape_gray_radius16"
            android:gravity="center"
            android:text="@string/backView"
            android:textColor="@color/text_orange"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/goOnPlay"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:background="@drawable/resume_play_bg"
            android:gravity="center"
            android:text="@string/resumePlay"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>